--- a/examples/advanced/package.json
+++ b/examples/advanced/package.json
@@ -10,21 +10,22 @@
     "start:prod": "node dist/main.js"
   },
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@aws-sdk/client-sqs": "^3.0.0",
-    "@snow-tzu/nest-sqs-listener": "^1.0.0",
-    "dotenv": "^16.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
+    "@nestjs/platform-express": "^11.1.8",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/core": "^1.25.0",
-    "@opentelemetry/resources": "^1.25.0",
+    "@opentelemetry/instrumentation": "^0.52.0",
+    "@opentelemetry/resources": "^2.2.0",
     "@opentelemetry/sdk-trace-node": "^1.25.0",
     "@opentelemetry/semantic-conventions": "^1.25.0",
-    "@opentelemetry/instrumentation": "^0.52.0",
+    "@snow-tzu/nest-sqs-listener": "^0.0.1",
+    "dotenv": "^16.0.0",
     "pino": "^10.1.0",
-    "pino-pretty": "^13.1.2"
+    "pino-pretty": "^13.1.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
