--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "node --max-old-space-size=8192 node_modules/.bin/jest",
-    "test:watch": "node --max-old-space-size=8192 node_modules/.bin/jest --watch",
-    "test:cov": "node --max-old-space-size=8192 node_modules/.bin/jest --coverage",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
