--- a/examples/advanced/package.json
+++ b/examples/advanced/package.json
@@ -20,7 +20,9 @@
     "@opentelemetry/resources": "^2.2.0",
     "@opentelemetry/sdk-trace-node": "^1.25.0",
     "@opentelemetry/semantic-conventions": "^1.25.0",
-    "@snow-tzu/nest-sqs-listener": "^0.0.1",
+    "@snow-tzu/nest-sqs-listener": "^0.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.0",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
