--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snow-tzu/nest-sqs-listener",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A NestJS package that abstracts SQS infrastructure complexity, letting you write listeners with pure business logic while handling polling, acknowledgement, errors, and lifecycle automatically",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -33,6 +33,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "class-validator": "^0.14.2",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
