--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,11 +22,6 @@
   ],
   "author": "ganesan arunachalam",
   "license": "MIT",
-  "dependencies": {
-    "@aws-sdk/client-sqs": "^3.0.0",
-    "class-transformer": "^0.5.1",
-    "reflect-metadata": "^0.1.13"
-  },
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
@@ -36,7 +31,10 @@
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
-    "class-validator": "^0.14.0"
+    "class-validator": "^0.14.0",
+    "@aws-sdk/client-sqs": "^3.0.0",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.1.13"
   },
   "peerDependenciesMeta": {
     "class-validator": {
