--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,7 +28,10 @@
     "class-validator": "^0.14.2",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "@aws-sdk/client-sqs": "^3.0.0",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.1.13"
   },
   "peerDependencies": {
     "class-validator": "^0.14.0",
