--- a/packages/fastify-adapter/package.json
+++ b/packages/fastify-adapter/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@snow-tzu/nest-sqs-listener",
-  "version": "0.0.7",
-  "description": "NestJS adapter for @snow-tzu/sqs-listener",
+  "name": "@snow-tzu/fastify-sqs-listener",
+  "version": "0.0.2",
+  "description": "Fastify adapter for @snow-tzu/sqs-listener",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
@@ -13,37 +14,42 @@
     "prepublishOnly": "yarn build"
   },
   "keywords": [
-    "nestjs",
+    "fastify",
     "sqs",
     "aws",
     "message-queue",
-    "listener"
+    "listener",
+    "plugin"
   ],
   "author": "ganesan arunachalam",
   "license": "MIT",
   "dependencies": {
-    "@snow-tzu/sqs-listener": "0.0.3"
+    "@snow-tzu/sqs-listener": "^0.0.3",
+    "fastify-plugin": "^4.0.0"
   },
   "devDependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "fastify": "^4.0.0",
     "jest": "^29.5.0",
-    "rxjs": "^7.0.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "^9.0.0 || ^10.0.0",
-    "@nestjs/core": "^9.0.0 || ^10.0.0",
-    "rxjs": "^7.0.0"
+    "fastify": "^4.0.0"
   },
   "files": [
     "dist",
     "README.md",
     "LICENSE"
   ],
-  "repository": "https://github.com/ganesanarun/sqs-listener"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ganesanarun/sqs-listener.git",
+    "directory": "packages/fastify-adapter"
+  },
+  "homepage": "https://github.com/ganesanarun/sqs-listener#readme",
+  "bugs": {
+    "url": "https://github.com/ganesanarun/sqs-listener/issues"
+  }
 }
